<resources>
    <string name="app_name" translatable="false">PicSorter</string>
    <string name="observer_name" translatable="false">ObserverChannel</string>
    <string name="observer_text">Hide the notification to press below.</string>
    <string name="layout_settings_switch_enable">Enable PicSorter</string>
    <string name="layout_settings_switch_run_on_boot">Run PicSorter on booting</string>
    <string name="layout_settings_observed_list_text">List of observed directories</string>
    <string name="layout_settings_observed_list_button_add_description">Add observed directory</string>
    <string name="layout_settings_observed_button_remove_description">Exclude from observed list</string>
    <string name="error_duplication">Error: The value is already registered</string>
    <string name="dialog_confirm_remove">Are you sure you want to delete?</string>
    <string name="dialog_do_remove">Remove</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="layout_manipulating_button_apply">APPLY</string>
    <string name="layout_manipulating_button_change">CHANGE</string>
    <string name="layout_manipulating_description_directory">Changes a directory where is saved the image.</string>
    <string name="layout_settings_switch_enables_description">Changes whether to observe the specified directories.
    </string>
    <string name="layout_manipulating_content_description_image">A manipulated image</string>
    <string name="layout_manipulating_content_description_button_delete">Deletes the image</string>
    <string name="layout_manipulating_description_rename">Renames the image.</string>
    <string name="layout_manipulating_description_delay">Deletes the image after the specified seconds.</string>
    <string name="layout_manipulating_switch_delay">Enable to delete the image later</string>
    <string name="layout_manipulating_text_delay_unit">Delay seconds:</string>
    <string name="layout_manipulating_hint_delay_seconds" translatable="false">120</string>
    <string name="notification_detection_button_manipulate">Edit</string>
    <string name="notification_detection_description">The image added has been detected</string>
    <string name="observer_text_sub">Observes updating</string>
    <string name="layout_settings_open_chooser">Choose directories are observed</string>
    <string name="dialog_ok">OK</string>
    <string name="title_copyright">Copyright</string>
    <string name="layout_settings_open_notification_settings">Open a standard notification settings shows on taking screenshot</string>
    <string name="layout_settings_description_open_notification_settings">Advanced: To disable Android standard notification.</string>
    <string name="dialog_permission_request_title">"Allow access to photos. "</string>
    <string name="dialog_permission_request_subtitle">This app doesn\'t work without permissions. Push a below button to allow.</string>
    <string name="layout_simplemanipulatingsettings_title">List of simple manipulation</string>
    <string name="layout_settings_open_simple_manipulating_settings">Open a settings for simple manipulating</string>
    <string name="layout_settings_description_open_simple_manipulating_settings">To omit manipulations by registering them.</string>
    <string name="layout_simple_manipulating_registerer_name">Name:</string>
    <string name="layout_simple_manipulating_registerer_button_register">REGISTER</string>
    <string name="error_must_not_empty">Error: The value must not be empty</string>
    <string name="notification_detection_button_simple_manipulating">ManipulateSimply</string>
    <string name="title_simple_manipulating_top">Settings for simple manipulatings</string>
    <string name="title_simple_manipulating_registerer">Register simple manipulating</string>
    <string name="title_directories_chooser">Settings for directories observed</string>
    <string name="notification_hide_self">Hide</string>
</resources>
