<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="viewModel"
                type="black.bracken.picsorter.ui.settings.simplemanipulating.registerer.SimpleManipulatingRegistererViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.settings.simplemanipulating.registerer.SimpleManipulatingRegistererFragment">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarSimpleManipulatingRegisterer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="#636363"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:titleTextColor="#E0E0E0" />

        <View
                android:id="@+id/backgroundApply"
                android:layout_width="0dp"
                android:layout_height="0dp"

                android:background="#B4B4B4"

                app:layout_constraintBottom_toBottomOf="@id/buttonRegister"
                app:layout_constraintEnd_toEndOf="@id/buttonRegister"
                app:layout_constraintStart_toStartOf="@id/textManipulatingName"
                app:layout_constraintTop_toTopOf="@id/buttonRegister" />

        <TextView
                android:id="@+id/textManipulatingName"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="12dp"
                android:gravity="center|end"
                android:padding="10dp"

                android:text="@string/layout_simple_manipulating_registerer_name"
                app:layout_constraintBottom_toBottomOf="@id/editManipulatingName"
                app:layout_constraintEnd_toStartOf="@id/editManipulatingName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/editManipulatingName" />

        <EditText
                android:id="@+id/editManipulatingName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="4dp"
                android:text="@={viewModel.manipulatingName}"

                app:layout_constraintEnd_toStartOf="@id/buttonRegister"
                app:layout_constraintStart_toEndOf="@id/textManipulatingName"
                app:layout_constraintTop_toBottomOf="@id/toolbarSimpleManipulatingRegisterer" />

        <Button
                android:id="@+id/buttonRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"

                android:text="@string/layout_simple_manipulating_registerer_button_register"

                app:layout_constraintBottom_toBottomOf="@id/editManipulatingName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/editManipulatingName"
                app:layout_constraintTop_toTopOf="@id/editManipulatingName" />

        <View
                android:id="@+id/backgroundDirectory"
                android:layout_width="0dp"
                android:layout_height="0dp"

                android:background="#B4B4B4"

                app:layout_constraintBottom_toBottomOf="@id/textDescriptionDirectory"
                app:layout_constraintEnd_toEndOf="@id/buttonChangeDirectory"
                app:layout_constraintStart_toStartOf="@id/textDirectoryPath"
                app:layout_constraintTop_toTopOf="@id/buttonChangeDirectory" />

        <Button
                android:id="@+id/buttonChangeDirectory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"

                android:text="@string/layout_manipulating_button_change"

                app:layout_constraintBottom_toTopOf="@id/textDescriptionDirectory"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textDirectoryPath"
                app:layout_constraintTop_toBottomOf="@id/editManipulatingName" />

        <TextView
                android:id="@+id/textDirectoryPath"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:gravity="center|start"

                android:padding="10dp"
                android:text="@{viewModel.directoryPath}"
                android:textColor="#000000"
                android:textSize="14sp"

                app:layout_constraintBottom_toBottomOf="@id/buttonChangeDirectory"
                app:layout_constraintEnd_toStartOf="@id/buttonChangeDirectory"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/buttonChangeDirectory" />

        <TextView
                android:id="@+id/textDescriptionDirectory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:gravity="center|start"
                android:padding="10dp"

                android:text="@string/layout_manipulating_description_directory"

                app:layout_constraintEnd_toEndOf="@id/buttonChangeDirectory"
                app:layout_constraintStart_toStartOf="@id/textDirectoryPath"
                app:layout_constraintTop_toBottomOf="@id/buttonChangeDirectory" />

        <View
                android:id="@+id/backgroundDelayDeletion"
                android:layout_width="0dp"
                android:layout_height="0dp"

                android:background="#B4B4B4"
                app:layout_constraintBottom_toBottomOf="@id/textDescriptionDelayedDeletion"
                app:layout_constraintEnd_toEndOf="@id/switchToDeleteLater"
                app:layout_constraintStart_toStartOf="@id/switchToDeleteLater"
                app:layout_constraintTop_toTopOf="@id/switchToDeleteLater" />

        <Switch
                android:id="@+id/switchToDeleteLater"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="4dp"
                android:padding="10dp"
                android:text="@string/layout_manipulating_switch_delay"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textDescriptionDirectory" />

        <Space
                android:id="@+id/spaceDelayEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/textDescriptionDelayedDeletion"
                app:layout_constraintEnd_toStartOf="@id/textDelayUnit"
                app:layout_constraintHorizontal_weight="3"
                app:layout_constraintStart_toStartOf="@id/textDescriptionDelayedDeletion"
                app:layout_constraintTop_toBottomOf="@id/switchToDeleteLater" />

        <TextView
                android:id="@+id/textDelayUnit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center|end"
                android:padding="4dp"
                android:text="@string/layout_manipulating_text_delay_unit"
                app:layout_constraintBottom_toBottomOf="@id/editDelaySeconds"
                app:layout_constraintEnd_toStartOf="@id/editDelaySeconds"
                app:layout_constraintHorizontal_weight="3"
                app:layout_constraintStart_toEndOf="@id/spaceDelayEdit"
                app:layout_constraintTop_toTopOf="@id/editDelaySeconds" />

        <EditText
                android:id="@+id/editDelaySeconds"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:enabled="false"
                android:inputType="numberSigned"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toEndOf="@id/textDelayUnit"
                app:layout_constraintTop_toBottomOf="@id/switchToDeleteLater" />

        <TextView
                android:id="@+id/textDescriptionDelayedDeletion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:padding="10dp"
                android:text="@string/layout_manipulating_description_delay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editDelaySeconds" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>